---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"fn test<T1 T2>() -> void {}\")"
---
SOURCE_FILE@0..27
  FN@0..27
    SIG@0..25
      FN_KW@0..2 "fn"
      WHITESPACE@2..3 " "
      NAME@3..7
        IDENT@3..7 "test"
      BOUND_TYPES@7..14
        LESS@7..8 "<"
        BOUND_TYPE@8..10
          NAME@8..10
            IDENT@8..10 "T1"
        WHITESPACE@10..11 " "
        IDENT@11..13 "T2"
        GREATER@13..14 ">"
      PARAM_LIST@14..16
        LEFT_PAREN@14..15 "("
        RIGHT_PAREN@15..16 ")"
      WHITESPACE@16..17 " "
      RETURN_TYPE@17..25
        ARROW@17..19 "->"
        WHITESPACE@19..20 " "
        NAMED_TYPE@20..25
          PATH@20..25
            PATH_TYPE@20..25
              NAME@20..24
                IDENT@20..24 "void"
              WHITESPACE@24..25 " "
    BLOCK@25..27
      LEFT_BRACE@25..26 "{"
      RIGHT_BRACE@26..27 "}"

expected COMMA@11..13
